# restaurant-platform

./: .gitignore  docker-compose.yml
apps/tablet/: App.tsx  README.md  app.json  package.json
apps/tablet/src/config/: api.ts
docs/: PROJECT_CONTEXT.md
services/: __init__.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_create_menu_items.py
services/api/app/: db.py  main.py  models.py
services/api/restaurant_platform_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: test_health.py  test_menu.py
